[project]
name = "smart-pet-agent"
version = "0.1.0"
description = "Data-first RAG customer service agent for smart pet product recommendations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "chromadb>=0.5.0,<1.0.0",
  "dashscope>=1.20.0",
  "fastapi>=0.115.0",
  "fsspec[http]>=2023.1.0,<=2026.4.0",
  "langchain-core>=0.2.35",
  "langchain-community>=0.2.12",
  "langchain-openai>=0.1.20",
  "langgraph>=0.2.20",
  "openai>=1.40.0",
  "numpy<2.0.0",
  "onnxruntime==1.18.1",
  "packaging<24.0.0",
  "pandas>=2.2.0",
  "protobuf<5.0.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "pyyaml>=6.0.0",
  "huggingface_hub>=0.25.0",
  "safetensors>=0.4.0",
  "transformers>=4.51.0",
  "rich<14.0.0",
  "sentencepiece==0.1.99",
  "streamlit>=1.37.0",
  "tenacity<9.0.0",
  "torch==2.4.1",
  "uvicorn>=0.30.0",
  "websockets<16.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
demo = [
  "pillow>=10.0.0",
  "playwright>=1.50.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"pet_agent.api" = ["static/*.html"]
